[gd_scene load_steps=11 format=3 uid="uid://eoy8eko2gpmi"]

[ext_resource type="Script" path="res://Scene.gd" id="1_4j58p"]
[ext_resource type="Script" path="res://3Drawer.gd" id="1_qky4e"]
[ext_resource type="ArrayMesh" uid="uid://dam34u2xb3t3l" path="res://cone.obj" id="3_sd46s"]
[ext_resource type="Script" path="res://CpArea.gd" id="4_21rro"]
[ext_resource type="ArrayMesh" uid="uid://bkpkf6pobsabd" path="res://pyramid.obj" id="4_u6pqt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ksl1i"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_60ngl"]

[sub_resource type="Environment" id="Environment_26epq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ayt7t"]
shading_mode = 0
albedo_color = Color(0.964706, 0, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m1dat"]
shading_mode = 0
albedo_color = Color(1, 0.815686, 0, 1)

[node name="Scene" type="Node3D"]
script = ExtResource("1_4j58p")

[node name="3Drawer" type="Node3D" parent="."]
script = ExtResource("1_qky4e")

[node name="Origin" type="MeshInstance3D" parent="."]
transform = Transform3D(0.006, 0, 0, 0, 0.006, 0, 0, 0, 0.006, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ksl1i")
mesh = SubResource("SphereMesh_60ngl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="u" type="Label" parent="CanvasLayer"]
offset_left = 8.787
offset_top = 15.541
offset_right = 86.787
offset_bottom = 41.541
text = "Vector u : "

[node name="x" type="TextEdit" parent="CanvasLayer/u"]
layout_mode = 0
offset_left = 79.0
offset_top = -6.0
offset_right = 126.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(1, 0, 0, 1)
placeholder_text = "x"

[node name="y" type="TextEdit" parent="CanvasLayer/u"]
layout_mode = 0
offset_left = 129.0
offset_top = -6.0
offset_right = 176.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 1, 0, 1)
placeholder_text = "y"

[node name="z" type="TextEdit" parent="CanvasLayer/u"]
layout_mode = 0
offset_left = 179.0
offset_top = -6.0
offset_right = 226.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 1, 1)
placeholder_text = "z"

[node name="rotateU" type="Button" parent="CanvasLayer/u"]
layout_mode = 0
offset_left = 240.213
offset_top = -1.541
offset_right = 296.213
offset_bottom = 29.459
scale = Vector2(1.006, 1.006)
text = "rotate"

[node name="w" type="Label" parent="CanvasLayer"]
offset_left = 8.787
offset_top = 65.889
offset_right = 86.787
offset_bottom = 91.889
text = "Vector w : "

[node name="x" type="TextEdit" parent="CanvasLayer/w"]
layout_mode = 0
offset_left = 79.0
offset_top = -6.0
offset_right = 126.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(1, 0, 0, 1)
placeholder_text = "x"

[node name="y" type="TextEdit" parent="CanvasLayer/w"]
layout_mode = 0
offset_left = 129.0
offset_top = -6.0
offset_right = 176.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 1, 0, 1)
placeholder_text = "y"

[node name="z" type="TextEdit" parent="CanvasLayer/w"]
layout_mode = 0
offset_left = 179.0
offset_top = -6.0
offset_right = 226.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 1, 1)
placeholder_text = "z"

[node name="rotateW" type="Button" parent="CanvasLayer/w"]
layout_mode = 0
offset_left = 240.213
offset_top = -7.889
offset_right = 296.213
offset_bottom = 34.111
scale = Vector2(1.006, 1.006)
text = "rotate"

[node name="CameraSettings" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 11.0
offset_top = 136.0
offset_right = 80.0
offset_bottom = 162.0
text = "Camera :"

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/CameraSettings"]
layout_mode = 0
offset_left = 77.0
offset_top = -6.0
offset_right = 207.0
offset_bottom = 32.0
text = "Orthogonal"

[node name="Button" type="Button" parent="CanvasLayer/CameraSettings"]
layout_mode = 0
offset_left = 218.0
offset_top = -5.0
offset_right = 282.0
offset_bottom = 32.0
text = "switch
"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.0195313
anchor_bottom = 1.00694
offset_left = 11.0
offset_top = -42.0
offset_right = 214.0
offset_bottom = -16.0
grow_vertical = 0
text = "Marco Casu"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -203.0
offset_top = 13.0
offset_right = -17.0
offset_bottom = 39.0
grow_horizontal = 0
text = "Cross Product Visualizer"

[node name="module" type="Label" parent="CanvasLayer"]
offset_left = 17.0
offset_top = 164.0
offset_right = 76.0
offset_bottom = 190.0
text = "module"

[node name="rotateButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 9.0
offset_top = 204.0
offset_right = 114.0
offset_bottom = 235.0
text = "rotate scene"

[node name="resetRotation" type="Button" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 200.0
offset_right = 136.0
offset_bottom = 231.0
text = "reset rotation"

[node name="zoomIn" type="Button" parent="CanvasLayer"]
offset_left = 13.0
offset_top = 253.0
offset_right = 83.0
offset_bottom = 284.0
text = "zoom in"

[node name="zoomOut" type="Button" parent="CanvasLayer"]
offset_left = 99.0
offset_top = 254.0
offset_right = 180.0
offset_bottom = 285.0
text = "zoom out"

[node name="ShowArea" type="Button" parent="."]
offset_left = 49.0
offset_top = 119.0
offset_right = 243.0
offset_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Show CrossProductArea"

[node name="center" type="Node3D" parent="."]

[node name="ortCamera" type="Camera3D" parent="center"]
transform = Transform3D(0.707107, -0.324314, 0.628347, 0, 0.888617, 0.458649, -0.707107, -0.324314, 0.628347, 7.367, 5.521, 7.367)
environment = SubResource("Environment_26epq")
projection = 1
current = true
size = 3.0

[node name="Camera3D2" type="Camera3D" parent="center"]
transform = Transform3D(0.707107, -0.281958, 0.648459, 0, 0.91706, 0.398749, -0.707107, -0.281958, 0.648459, 0.452, 0.37, 0.452)

[node name="cone" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.752636, -0.0509675, 0.384376)
visible = false
material_override = SubResource("StandardMaterial3D_ayt7t")
mesh = ExtResource("3_sd46s")

[node name="pyramid" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.752636, -0.0509675, 0.384376)
visible = false
material_override = SubResource("StandardMaterial3D_ayt7t")
mesh = ExtResource("4_u6pqt")

[node name="Area" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_m1dat")
script = ExtResource("4_21rro")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.078894, 0.996883, 0, -0.996883, 0.078894, 0, 7.27507, 0)

[connection signal="button_down" from="CanvasLayer/u/rotateU" to="." method="_on_rotate_u_button_down"]
[connection signal="button_down" from="CanvasLayer/w/rotateW" to="." method="_on_rotate_w_button_down"]
[connection signal="button_down" from="CanvasLayer/CameraSettings/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="CanvasLayer/rotateButton" to="." method="_on_rotate_button_button_down"]
[connection signal="pressed" from="CanvasLayer/rotateButton" to="." method="_on_rotate_button_pressed"]
[connection signal="button_down" from="CanvasLayer/resetRotation" to="." method="_on_reset_rotation_button_down"]
[connection signal="button_down" from="CanvasLayer/zoomIn" to="." method="_on_zoom_in_button_down"]
[connection signal="button_down" from="CanvasLayer/zoomOut" to="." method="_on_zoom_out_button_down"]
[connection signal="button_down" from="ShowArea" to="." method="_on_show_area_button_down"]
